[gd_scene load_steps=2 format=3 uid="uid://ca7u6viecffds"]

[ext_resource type="Script" path="res://Scripts/Player/Camera/PlayerCamera.gd" id="1_4l86n"]

[node name="PlayerCamera" type="Node3D"]
transform = Transform3D(-1, 0, -8.74227e-08, 0, 1, 0, 8.74227e-08, 0, -0.999999, 0, 0, 0)
script = ExtResource("1_4l86n")

[node name="Rotation" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.615662, -0.788011, 0, 0.788011, 0.615662, 0, 0, 0)

[node name="CameraRig" type="Node3D" parent="Rotation"]
transform = Transform3D(1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 50, -1.90735e-06)

[node name="Camera3D" type="Camera3D" parent="Rotation/CameraRig"]
transform = Transform3D(1, 0, 0, 0, -0.000785291, 1, 0, -1, -0.000785388, 0, 0, 0)
current = true
fov = 35.0

[node name="ForwardCollisionRayCast3D" type="RayCast3D" parent="Rotation/CameraRig/Camera3D"]
process_mode = 3
enabled = false
target_position = Vector3(0, 0, -15)
collide_with_areas = true
debug_shape_custom_color = Color(0.952941, 0.0823529, 0.756863, 1)

[node name="ZoomRayCast3D" type="RayCast3D" parent="Rotation/CameraRig/Camera3D"]
enabled = false
target_position = Vector3(0, 0, -10000)

[node name="BottomCollisionRayCast3D" type="RayCast3D" parent="Rotation/CameraRig"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
enabled = false
target_position = Vector3(0, -5, 0)
collide_with_areas = true
debug_shape_thickness = 5
